--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -105,6 +105,13 @@ services:
     metallb.universe.tf/loadBalancerIPs: 192.168.122.241
 ----
 
+
+[NOTE]
+====
+You need to adjust the parameter [literal]``metallb.universe.tf/loadBalancerIPs``to your network setup.
+====
+
+
 To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
 For more informationm see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
 The persistent volume claims are named:
