--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -155,7 +155,7 @@ The products you need for this procedure are:
 | OS Version | Product Name
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
-| {redhat} 9 | RHEL 9 Base
+| {redhat} 9 | RHEL and Liberty 9 Base
 |===
 
 //[NOTE]
@@ -196,9 +196,9 @@ The channels you need for this procedure are:
 | res8-manager-tools-pool-x86_64
 
 | {redhat} 9
-| rhel9-pool-x86_64
+| el9-pool-x86_64
 | -
-| res9-suse-manager-tools-x86_64
+| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
 
 |===
 
@@ -311,7 +311,7 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
-| {redhat} 9 | RHEL 9 Base | rhel9-pool-x86_64
+| {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
 |===
 
 //[NOTE]
