--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -141,7 +141,7 @@ Only trusted software can be installed on clients.
 ====
 Trusting a GPG key is important for security on clients.
 It is the task of the administrator to decide which keys are needed and can be trusted.
-Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+A software channel cannot be assigned to a client when the GPG key is not trusted.
 ====
 
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
