--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -131,7 +131,7 @@ The icons in this table indicate:
 | Monitoring server
 | {cross}
 
-| Clients monitoring
+| Monitored clients
 | {salt}
 
 | Docker buildhost
