--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -199,7 +199,7 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 
-| Clients monitoring
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
