--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -198,7 +198,7 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 
-| Clients monitoring
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
