--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -137,6 +137,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
+| {check}
+
 | {rocky} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -262,8 +267,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
+| {check}
+
 | {rocky} 8
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -301,6 +311,7 @@ For more information about end-of-life dates, see https://endoflife.software/ope
 == Supported Tools Packages
 
 The ``spacewalk-utils`` and ``spacewalk-utils-extras`` packages can provide additional services and features.
+
 ifeval::[{suma-content} == true]
 The ``spacewalk-utils`` package in {productname} is fully supported by {suse}, and contains these tools:
 endif::[]
