--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -230,8 +230,18 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
+| {check}
+
 | {rocky} 8
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 22.04
+| {x86_64}
 | {cross}
 | {check}
 
