Add details about monitoring server and clients (#1936)
* Add details about monitoring server and clients

* Update modules/client-configuration/pages/supported-features-alibaba.adoc

* Update modules/client-configuration/pages/supported-features-almalinux.adoc

* Update modules/client-configuration/pages/supported-features-amazon.adoc

* Update modules/client-configuration/pages/supported-features-centos.adoc

* Update modules/client-configuration/pages/supported-features-debian.adoc

* Update modules/client-configuration/pages/supported-features-es.adoc

* Update modules/client-configuration/pages/supported-features-rh.adoc

* Update modules/client-configuration/pages/supported-features-rocky.adoc

* Update modules/client-configuration/pages/supported-features-ubuntu.adoc

* Update modules/client-configuration/pages/supported-features-sles.adoc

* Update modules/client-configuration/pages/supported-features-sle-micro.adoc

* Update modules/client-configuration/pages/supported-features-oracle.adoc

Co-authored-by: Ornela Marić <omaric@suse.de>

--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -128,7 +128,10 @@ The icons in this table indicate:
 | Power management
 | {check}
 
-| Monitoring
+| Monitoring server
+| {cross}
+
+| Monitored clients
 | {salt}
 
 | Docker buildhost
