--- a/modules/client-configuration/pages/supported-features-sles.adoc
+++ b/modules/client-configuration/pages/supported-features-sles.adoc
@@ -200,7 +200,12 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Monitoring
+| Monitoring server
+| {salt}
+| {salt}
+| {salt}
+
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
