--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -201,7 +201,12 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+| {cross}
+
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
