--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -112,12 +112,4 @@ This window may be several hours after the client is registered.
 To speed up {leapmicro} registration, manually reboot the client after the registration script finishes.
 ====
 
-To register {leapmicro} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using the command:
-
-----
-mgr-create-bootstrap-repo
-----
-
-For more information on registering clients, see xref:client-configuration:registration-overview.adoc[].
+include::snippets/create_bootstrap_repo_register.adoc[]
