--- a/modules/client-configuration/pages/clients-alibaba.adoc
+++ b/modules/client-configuration/pages/clients-alibaba.adoc
@@ -114,16 +114,14 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 == Register Clients
 
-[[WARNING]]
-====
-Some {alibabaclo}{nbsp}2 instances will fail to register on the first try.
-This is due to a to a known bug in the {alibabaclo}{nbsp}2 image.
-The `python-urlgrabber3` package is provided both as a Python pip package and an RPM package, which can cause a conflict on the first attempt to register.
-
-If your instance is based on one of the affected image versions, the client should register correctly on the second registration attempt.
-====
-
 include::snippets/create_bootstrap_repo_register.adoc[]
 
+Some {alibabaclo}{nbsp}2 instances will fail to register on the first try.
 
+This is due to a to a known bug in the {alibabaclo}{nbsp}2 image.
 
+The `python-urlgrabber3` package is provided both as a Python pip package and 
+an RPM package, which can cause a conflict on the first attempt to register. 
+
+If your instance is based on one of the affected image versions, the client 
+should register correctly on the second registration attempt.
